Set the publisher id

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "brutalist",
     "displayName": "Brutalist",
     "description": "A Brutalist color theme (port of https://git.madhouse-project.org/algernon/brutalist-theme.el)",
+    "publisher": "willroe",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.39.0"
